@@ -2,7 +2,9 @@
 
 Python 3 (3.6+) is required now. Mpc was dropped as a requirement. Make sure python 3 is installed on your system!
 
-- Switches backend from mpc to python-mpd2
+- Changes backend from mpc to python-mpd2 (requires python 3.6+)
+- Adds "Don't make me scroll over the same library over and over" shuffle button
+- Fixes Ctrl+F not reliably jumping to search
 
 # 5.6.0
 
